--- a/package.json
+++ b/package.json
@@ -29,5 +29,10 @@
     "eslint": "^8.22.0",
     "glob": "^8.0.3",
     "typescript": "^4.7.4"
-  }
+  },
+  "volta": {
+    "node": "16.16.0",
+    "yarn": "1.22.19"
+  },
+  "prettier": "@transferwise/eslint-config/.prettierrc.js"
 }
